[package]
name = "wvst-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = [
    "assert_process_allocs",
] }
nih_plug_webview = { git = "https://github.com/maxjvh/nih-plug-webview" }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"

[workspace]
members = ["xtask"]
